fixed text overlapping

--- a/pages/2019/styles/layout/_header.scss
+++ b/pages/2019/styles/layout/_header.scss
@@ -84,7 +84,6 @@
 }
 
 .rectangle {
-  height: 14rem;
   margin-top: 1%;
   background: rgba(#23447a, 0.65);
   width: 100%;
